--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -5,6 +5,7 @@
 .frost-modal-demo {
   display: flex;
   flex-direction: row;
+  height: 100%;
 }
 
 .frost-modal-demos {
